--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-	<form action="/contacta" name="contactus" id="contactus" method="post">
+	<form action="index3.html" name="contactus" id="contactus" method="post" onSubmit="return clearFormData()">
 		<fieldset>
 			<p>Nombre <span>* (obligatorio, al menos 2 caracteres)</p>
 		  	<input type="name" name="name" placeholder="Nombre" class="keepInputValue">
@@ -10,4 +10,4 @@
 		<input type="submit" value="Send form">
 	</form>
 
-	<script type="text/javascript" src='js/tracker.js'></script>
+	<script type="text/javascript" src='js/contactFormTracker.js'></script>
